--- a/stack.yml
+++ b/stack.yml
@@ -25,7 +25,7 @@ Parameters:
   Image:
     Description: Choose the docker image that should be deployed
     Type: String
-    Default: aboutyou/scayle-storefront-demo:1.0.0-rc.8
+    Default: aboutyou/scayle-storefront-demo:1.0.0-storyblok
 
   # =============================================================================
   # SCAYLE Authentication
